# tracter

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Doxyfile.in  Makefile  Makefile.am  NEWS  README  README.component  README.md  codec.cpp  configure.ac  extracter.cpp  prepare.sh  recorder.cpp  tracter.pc.in
cmake/: FindALSA.cmake  FindBSAPI.cmake  FindKissFFT.cmake  FindLibResample.cmake  FindPulseAudio.cmake  FindRtAudio.cmake  FindSndFile.cmake  FindTracter.cmake
doc/: Makefile.am  build.doc  design.doc  framing.tex  index.doc  introduction.tex  parameters.tex  programming.doc  programming.tex  segmenter.tex  stl.doc  tracter.bbl  tracter.tex
etc/: basic-16k.sh
src/: ALSASource.cpp  ALSASource.h  ASRFactory.cpp  ASRFactory.h  ArraySink.h  BSAPIFastVTLN.cpp  BSAPIFastVTLN.h  BSAPIFilterBank.cpp  BSAPIFilterBank.h  BSAPIFrontEnd.cpp  BSAPIFrontEnd.h  BSAPITransform.cpp  BSAPITransform.h  BlasLinear.h  ByteOrder.cpp  ByteOrder.h  CMakeLists.txt  CachedComponent.h  CachedPlugin.h  Cepstrum.cpp  Cepstrum.h  Comparator.cpp  Comparator.h  ComplexPeriodogram.cpp  ComplexPeriodogram.h  ComplexSample.cpp  ComplexSample.h  Component.cpp  Component.h  Concatenate.cpp  Concatenate.h  ConvertSampleRate.cpp  ConvertSampleRate.h  CosineTransform.cpp  CosineTransform.h  Delta.cpp  Delta.h  Divide.cpp  Divide.h  Energy.cpp  (+166 more)
test/: CMakeLists.txt  test-feature-ref.txt  test-feature.cmake  test-feature.cpp  test-fft-ref.txt  test-fft.cmake  test-fft.cpp  test-tokenise-ref.txt  test-tokenise.cmake  test-tokenise.cpp  test.lna  test1.htk  test2.htk
tracter/: ALSASource.cpp  ALSASource.h  ASRFactory.cpp  ASRFactory.h  BSAPIFastVTLN.cpp  BSAPIFastVTLN.h  BSAPIFilterBank.h  BSAPIFrontEnd.cpp  BSAPIFrontEnd.h  BlasLinear.cpp  BlasLinear.h  BoolToFloat.cpp  BoolToFloat.h  ByteOrder.cpp  ByteOrder.h  CMakeLists.txt  CachedComponent.h  Cepstrum.cpp  Cepstrum.h  CochlearFilter.cpp  CochlearFilter.h  CochlearFrame.cpp  CochlearFrame.h  Comparator.cpp  Comparator.h  ComplexPeriodogram.cpp  ComplexPeriodogram.h  ComplexSample.cpp  ComplexSample.h  Component.cpp  Component.h  Concatenate.cpp  Concatenate.h  CosineTransform.cpp  CosineTransform.h  Delta.cpp  Delta.h  Divide.cpp  Divide.h  Energy.cpp  (+135 more)
