#
# Copyright 2007,2008 by IDIAP Research Institute
#                        http://www.idiap.ch
#
# See the file COPYING for the licence associated with this software.
#

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src
DIST_SUBDIRS = src doc
EXTRA_DIST = Doxyfile.in tracter.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = tracter.pc
